--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body{
   background-color: #0D0D0D;
-  color: #BCF26B;
+  color: #F2F2F2;
   display: flex;
+  height: 3000px;
   flex-direction: column;
   margin: 45px 25px;
   font-family: futura-pt-bold, sans-serif;
@@ -11,9 +12,50 @@ body{
 
 h1{
   font-size: 70px;
+  margin: 0;
 }
 
-.row{
+.row25{
   display: flex;
   width: 100%;
+  height: 250px;
+  align-items: center;
+}
+
+.row75{
+  display: flex;
+  width: 100%;
+  height: calc(100% - 250px);
+}
+
+.bar{
+  width: 5px;
+  background-color: #F2F2F2;
+  height: 100%;
+}
+
+.slide{
+  display: flex;
+  background-color: #022601;
+  width: 100%;
+  height: 20%;
+}
+
+.slide:nth-child(odd){
+  background-color: #BCF26B;
+}
+
+.col15{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 15%;
+}
+
+.col85{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 85%;
 }
